# axum-otel

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
crates/axum-otel/: Cargo.toml  README.md
crates/axum-otel/src/: axum.rs  config.rs  header_extractor.rs  lib.rs  make_span.rs  middleware.rs  on_failure.rs  on_response.rs  otel.rs  otel_span.rs  root_span_builder.rs  root_span_macro.rs
examples/custom-root-span/: Cargo.toml  README.md
examples/custom-root-span/src/: main.rs
examples/opentelemetry/: Cargo.toml
examples/opentelemetry/src/: main.rs
examples/otel/: README.md
examples/otel/src/: main.rs
examples/request-id-response-header/: Cargo.toml
src/: axum.rs  lib.rs  middleware.rs  otel_span.rs  root_span_builder.rs  root_span_macro.rs
